services/datahub/charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datahub-gms-ingress
  namespace: datahub
  annotations:
    kubernetes.io/ingress.class: nginx
    # rewrite-target is used to remove the /api/v1/models prefix from the URL
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # setting 2 minute timeouts for the model-api
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /datahub/gms/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: datahub-datahub-gms
            port:
              number: 8080
